# WirelessDimmerControllerFirmware

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh  config.cfg  deploy.ps1  fetch.sh  gui.yml  local.ps1  local.sh  main.cpp  model.yml  rebuild.ps1  remote.ps1  remote.sh  test  test.yml
arm-libs/: libGLEW.so.2.2  libglfw.so.3.3  libxcb.so.1.1.0
docker/: Dockerfile
fonts/: readme-KelveticaNobis.txt
lang/: english.cfg
scene/: scene0.cfg
shaders/: basic.frag.glsl  basic_fragment.glsl  font_fragment.glsl  font_vertex.glsl  knob.frag.glsl  knob_fragment.glsl  knob_vertex.glsl  scale.frag.glsl  scale.vert.glsl  texture.frag.glsl  texture.vert.glsl
src/firmware/: errors.hpp  logging.cpp  logging.hpp  main.cpp
src/firmware/config/: configuration.cpp  configuration.hpp
src/firmware/event/: click_event.cpp  click_event.hpp  drag_event.hpp  event.cpp  event.hpp  event_system.hpp  scroll_event.hpp
src/firmware/gui/: button.cpp  button.hpp  channel_screen.cpp  channel_screen.hpp  component.cpp  component.hpp  guibuilder.cpp  guibuilder.hpp  keyboard_view.cpp  keyboard_view.hpp  knob.cpp  knob.hpp  label.cpp  label.hpp  main_screen.cpp  main_screen.hpp  onscreen_keyboard.cpp  onscreen_keyboard.hpp  panel.cpp  panel.hpp  point.hpp  renderer.cpp  renderer.hpp  shape2.cpp  shape2.hpp  single_channel_view.cpp  single_channel_view.hpp  slider.cpp  slider.hpp  texture.cpp  texture.hpp  view.cpp  view.hpp  window.cpp  window.hpp
src/firmware/hardware/: device.cpp  device.hpp  mcp3008.cpp  mcp3008.hpp  spi.h
src/firmware/input/: input_controller.cpp  input_controller.hpp
src/firmware/math/: matrix.hpp
src/firmware/model/: model.cpp  model.hpp
src/firmware/shell/: shell.cpp  shell.hpp
src/firmware/util/: custom_array.hpp
src/glew/: CMakeLists.txt
textures/projects/: fader_knob.xcf  rotary_knob.xcf
